--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -91,7 +91,7 @@ def androidBuild() {
             try {
                 checkout scm
                 rust = build('rust', 'vcx/ci/android.dockerfile', 'vcx')
-                buildAndroid(rust)
+                //buildAndroid(rust)
                 packageAndroid(rust)
                 publishAndroid(rust)
             } catch (Exception ex) {
@@ -311,18 +311,11 @@ def buildAndroid(envn) {
 def packageAndroid(envn) {
     envn.inside {
         sh "echo ${PWD}"
+        USER root
         ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidPackage.sh'
         sh "chmod +x ${ANDROID_SCRIPT_PATH}"
         sh "./${ANDROID_SCRIPT_PATH}"
-     //   ANDROID_JNI_LIB='../vcx/wrappers/java/vcx/src/main/jniLibs'
-     //   sh "mkdir -p ${ANDROID_JNI_LIB}/arm"
-     //   sh "mkdir -p ${ANDROID_JNI_LIB}/x86"
-     //   sh "mkdir -p ${ANDROID_JNI_LIB}/arm64"
-
-     //   sh "cp -v runtime_android_build/libvcx_arm/libvcx.so ${ANDROID_JNI_LIB}/arm/libvcx.so"
-     //   //cp -v runtime_android_build/libvcx_x86/libvcx.so ${ANDROID_JNI_LIB}/x86
-
-     //   sh './~/vcx/wrappers/java/vcx/gradlew clean assemble'
+        USER vcx
     }
 }
 
