--- a/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
+++ b/vcx/wrappers/python3/ci/Dockerfile-python-wrapper
@@ -1,7 +1,6 @@
 # Development
-FROM libindy
-
-ARG uid=1000
+FROM libvcx
+USER root
 
 RUN apt-get update && apt-get install -y python3
 
@@ -9,12 +8,7 @@ RUN apt-get install -y python3-pip
 
 RUN pip3 install pytest qrcode pytest-asyncio
 
-ENV PYTHONPATH=$PYTHONPATH:/python3
-
-RUN mkdir -p /scripts
-COPY vcx/ci/scripts/ /scripts
-
-WORKDIR /python3/tests
+ENV PYTHONPATH=$PYTHONPATH:/sdk/vcx/wrappers/python3
 
 CMD [ "/sdk/vcx/wrappers/python3/ci/test-python.sh" ]
 
