--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -302,11 +302,15 @@ def fail() {
 def buildAndroid(envn) {
     envn.inside {
         ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
-        parallel([
-            'arm': { sh "./${ANDROID_SCRIPT_PATH} arm"},
-            'x86': { sh "./${ANDROID_SCRIPT_PATH} x86"},
-            'arm64': { sh "./${ANDROID_SCRIPT_PATH} arm64"}
-        ])
+        sh "./${ANDROID_SCRIPT_PATH} arm"
+        sh "./${ANDROID_SCRIPT_PATH} x86"
+        sh "./${ANDROID_SCRIPT_PATH} arm64"
+        //Todo: get parallel processing to work. Currently it fails on Jenkins. It must share files or something
+        // parallel([
+        //     'arm': { sh "./${ANDROID_SCRIPT_PATH} arm"},
+        //     'x86': { sh "./${ANDROID_SCRIPT_PATH} x86"},
+        //     'arm64': { sh "./${ANDROID_SCRIPT_PATH} arm64"}
+        // ])
     }
 }
 
