parallel with main and android

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -12,7 +12,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            //'Main' : { mainUbuntu() },
+            'Main' : { mainUbuntu() },
             'Android': { android() },
             //'iOS' : { ios() }
         ])
