--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -100,8 +100,10 @@ def android() {
                 //Package .so files into .aar 
                 packageAndroid(rust)
 
-                //Publish package on aptly
-                publishAndroid(rust)
+                if (env.BRANCH_NAME == "master") {
+                    //Publish package on aptly
+                    publishAndroid(rust)
+                }
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
                 if (env.BRANCH_NAME == "master") {
