--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -100,10 +100,12 @@ def android() {
                 //Package .so files into .aar 
                 packageAndroid(rust)
 
-                if (env.BRANCH_NAME == "master") {
+                //if (env.BRANCH_NAME == "master") {
                     //Publish package on aptly
-                    publishAndroid(rust)
-                }
+                    //publishAndroid(rust)
+                //}
+                // TODO:KS Remove this after testing
+                publishAndroid(rust)
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
                 if (env.BRANCH_NAME == "master") {
