Remove RUST_LOG

--- a/vcx/wrappers/node/package.json
+++ b/vcx/wrappers/node/package.json
@@ -35,7 +35,7 @@
     },
     "scripts": {
         "compile": "./node_modules/.bin/tsc -p ./tsconfig.json",
-        "test": "export RUSL_LOG=\"trace\" && mocha -gc --expose-gc test/**/*Test.js && mocha -gc --expose-gc test/**/*Test.separate.js",
+        "test": "mocha -gc --expose-gc test/**/*Test.js && mocha -gc --expose-gc test/**/*Test.separate.js",
         "lint": "./node_modules/.bin/tslint --type-check -c ./tslint.json -p ./tsconfig.json && ./node_modules/.bin/standard 'test/**/*.js'",
         "doc-gen": "./node_modules/.bin/jsdoc -r -d doc dist/*"
     },
