--- a/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
+++ b/vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper
@@ -1,8 +1,8 @@
 # Development
-FROM nodejs
+FROM nodejs:8
 ARG uid=1000
 # Assumes we are in the ./vcx directory
-RUN npm install typescript-compiler
+RUN npm i -g npm@6.1.0
 COPY libvcx/target/debug/libvcx.so /usr/lib
 RUN useradd -ms /bin/bash -u $uid vcx
 USER vcx
