--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -4,6 +4,7 @@ def rust
 def vcx_python
 def libindy
 def vcx_nodejs
+def ANDROID_SCRIPT_PATH = 'vcx/ci/scripts/androidBuild.sh'
 
 testing()
 
@@ -83,18 +84,67 @@ def mainUbuntu() {
     }
 }
 
-
+def androidArmStash = 'androidArmStash'
+def androidx86Stash = 'androidx86Stash'
+def androidArm64Stash = 'androidarm64Stash'
 def android() {
-    node('ubuntu') {
-        stage('Android Build') {
-            try {
-                checkout scm
+    try {
+        parallel([
+            'arm': {
+                node('ubuntu') {
+                  stage('Android Build: ARM') {
+                      checkout scm
+                      rust = build('rust', 'vcx/ci/android.dockerfile', 'vcx')
+                      rust.inside {
+                        sh "./${ANDROID_SCRIPT_PATH} arm"
+                        stash(
+                          name: androidArmStash,
+                          include: '*.fileext'
+                        )
+                      }
+                  }
+                }
+            },
+            'x86': {
+                node('ubuntu') {
+                  stage('Android Build: x86') {
+                    checkout scm
+                    rust = build('rust', 'vcx/ci/android.dockerfile', 'vcx')
+                    rust.inside {
+                        sh "./${ANDROID_SCRIPT_PATH} x86"
+                        stash(
+                          name: androidx86Stash,
+                          include: '*.fileext'
+                        )
+                    }
+                  }
+                }
+            },
+            'arm64': {
+                node('ubuntu') {
+                  stage('Android Build: arm64') {
+                      checkout scm
+                      rust = build('rust', 'vcx/ci/android.dockerfile', 'vcx')
+                      rust.inside {
+                          sh "./${ANDROID_SCRIPT_PATH} arm64"
+                          stash(
+                            name: androidArm64Stash,
+                            include: '*.fileext'
+                          )
+                      }
+                  }
+                }
+            }
+        ])
 
-                //Build android docker image
+        node('ubuntu') {
+            stage('Android Packaging') {
+                checkout scm
                 rust = build('rust', 'vcx/ci/android.dockerfile', 'vcx')
-                
-                //Build .so files for arm64, x86, and arm
-                buildAndroid(rust)
+
+                unstash(name: androidArmStash)
+                unstash(name: androidx86Stash)
+                unstash(name: androidArm64Stash)
 
                 //Package .so files into .aar 
                 packageAndroid(rust)
@@ -103,17 +153,16 @@ def android() {
                     //Publish package on aptly
                     publishAndroid(rust)
                 }
-            } catch (Exception ex) {
-                currentBuild.result = "FAILED"
-                if (env.BRANCH_NAME == "master") {
-                    fail()
-                }
-                echo "$ex error"
-            } finally {
-                step([$class: 'WsCleanup'])
             }
-
         }
+    } catch (Exception ex) {
+        currentBuild.result = "FAILED"
+        if (env.BRANCH_NAME == "master") {
+            fail()
+        }
+        echo "$ex error"
+    } finally {
+        step([$class: 'WsCleanup'])
     }
 }
 
