--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,7 +10,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            //'Main' : { mainUbuntu() },
+            'Main' : { mainUbuntu() },
             //'Android': { android() },
             'iOS' : { ios() }
         ])
@@ -132,6 +132,7 @@ def ios() {
                 sh "${CERT_SCRIPT}"
 
                 // Publish to Kraken
+                sh "cp vcx/libvcx/build_scripts/ios/mac/libvcxall.a ~"
                 withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                     sh "find vcx/libvcx/build_scripts/ios/mac -type f -name 'libvcxall.a' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
                 }
