--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,7 +10,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
+            //'Main' : { mainUbuntu() },
             //'Android': { android() },
             'iOS' : { ios() }
         ])
@@ -132,11 +132,13 @@ def ios() {
                 sh "${CERT_SCRIPT}"
 
                 // Publish to Kraken
-                sh "cp vcx/wrappers/ios/vcx/lib/libvcxall.a ~"
-                sh "zip libvcxall.zip vcx/wrappers/ios/vcx/lib/libvcxall.a"
+
+                TIME_VERSION="$(date +%Y%m%d_%H%M%S)"
+                sh "zip libvcxall_${TIME_VERSION}.zip vcx/wrappers/ios/vcx/lib/libvcxall.a"
                 withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
                     //sh "find vcx/libvcx/build_scripts/ios/mac -type f -name 'libvcxall.a' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
-                    sh "find vcx/wrappers/ios/vcx/lib/ -type f -name 'libvcxall.zip' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
+                    sh "curl -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/ios/upload -F libvcxall_${TIME_VERSION}.zip"
+
                 }
 
             } catch (Exception ex) {
