--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -13,7 +13,7 @@ path = "src/lib.rs"
 crate-type = ["staticlib","rlib", "dylib"]
 
 [features]
-default = ["nullpay"]
+default = ["no_payments"]
 pool_tests = []
 no_payments = []
 nullpay = []
@@ -27,7 +27,7 @@ log = "0.4"
 log4rs = "0.8.0"
 chrono = "0.4"
 lazy_static = "0.2"
-libc = "0.2.21"
+libc = "=0.2.41"
 rand = "0.3"
 serde = "1.0"
 serde_json = "1.0"
