--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -10,8 +10,8 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { mainUbuntu() },
-            'Android': { android() },
+            //'Main' : { mainUbuntu() },
+            //'Android': { android() },
             'iOS' : { ios() }
         ])
     }
@@ -124,19 +124,21 @@ def ios() {
                 SCRIPTS_PATH="vcx/libvcx/build_scripts/ios/mac"
                 WORK_DIR = "/Users/jenkins"
 
+                iosBuildIndySdk()
+
                 // Build ios architectures
-                sh "source vcx/ci/scripts/iosBuild.sh"
+                // sh "source vcx/ci/scripts/iosBuild.sh"
 
-                // Publish to Kraken
-                TIME_VERSION=sh (script: 'echo $(date +%Y%m%d_%H%M%S)', returnStdout: true ).trim()
-                sh "mkdir ${TIME_VERSION}"
-                sh "zip -r ${TIME_VERSION}/libvcxall_${TIME_VERSION}.zip vcx/wrappers/ios/vcx/lib/libvcxall.a"
+                // // Publish to Kraken
+                // TIME_VERSION=sh (script: 'echo $(date +%Y%m%d_%H%M%S)', returnStdout: true ).trim()
+                // sh "mkdir ${TIME_VERSION}"
+                // sh "zip -r ${TIME_VERSION}/libvcxall_${TIME_VERSION}.zip vcx/wrappers/ios/vcx/lib/libvcxall.a"
 
-                if (env.BRANCH_NAME == "master") {
-                    withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
-                        sh "find ${TIME_VERSION} -type f -name 'libvcxall_${TIME_VERSION}.zip' -exec curl -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
-                    }
-                }
+                // if (env.BRANCH_NAME == "master") {
+                //     withCredentials([usernameColonPassword(credentialsId: 'jenkins-kraken-svc', variable: 'KRAKEN_CREDENTIALS')]) {
+                //         sh "find ${TIME_VERSION} -type f -name 'libvcxall_${TIME_VERSION}.zip' -exec curl -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/ios/upload -F 'file=@{}' \\;"
+                //     }
+                // }
             } catch (Exception ex) {
                 // We currently do not fail the main build if the android and ios builds fail
                 // currentBuild.result = "FAILED"
@@ -373,4 +375,13 @@ def publishAndroid(envn) {
             sh "find vcx/wrappers/java/vcx/build/outputs/aar/ -type f -name 'com.evernym-vcx_*-release.aar' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST  https://kraken.corp.evernym.com/repo/android/upload -F 'file=@{}' \\;"
         }
     }
+}
+
+def iosBuildIndySdk() {
+    sh "export SCRIPTS_PATH=vcx/libvcx/build_scripts/ios/mac"
+    sh "export BASE_DIR=../../../../.."
+    sh "cd ${SCRIPTS_PATH}"
+    sh "echo ${PWD}"
+    //sh "./mac.02.libindy.env.sh"
+    //sh "./mac.03.libindy.build.sh"
 }
